--- a/Boton magico 2/Boton magico 2.csproj
+++ b/Boton magico 2/Boton magico 2.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9B24A860-059A-43A9-8103-97D52C53364B}</ProjectGuid>
+    <ProjectGuid>{A9BF6E6E-14FB-440B-8ED1-D45EB40D812C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>prueba1</RootNamespace>
-    <AssemblyName>prueba1</AssemblyName>
+    <RootNamespace>Boton_magico_2</RootNamespace>
+    <AssemblyName>Boton magico 2</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
