Interfaz incio de sesion 1 terminada (Falta programacion interna)

--- a/StockFood_Beta/StockFood_Beta.csproj
+++ b/StockFood_Beta/StockFood_Beta.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <None Remove="Images\LoginImage.jpg" />
+    <None Remove="View\Key.ico" />
     <None Remove="View\LoginImage.png" />
     <None Remove="View\user2.ico" />
   </ItemGroup>
@@ -23,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="View\Key.ico" />
     <Resource Include="View\LoginImage.png" />
     <Resource Include="View\user2.ico" />
   </ItemGroup>
